Completed TestDockerInstance